--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                 </nav>
                 <div class="product__cards">
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/apple-watch.png" alt="apple watch">
+                        <img class="product__card-img" src="img/apple-watch.png" alt="apple watch">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>3.4</span>
@@ -591,7 +591,7 @@
                         </div>
                     </div>
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/jbl-speaker.png" alt="jbl speaker">
+                        <img class="product__card-img" src="img/jbl-speaker.png" alt="jbl speaker">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>5.0</span>
@@ -620,7 +620,7 @@
                         </div>
                     </div>
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/iphone-x.png" alt="iphone x">
+                        <img class="product__card-img" src="img/iphone-x.png" alt="iphone x">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>4.4</span>
@@ -649,7 +649,7 @@
                         </div>
                     </div>
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/beats-headphones.png" alt="beats headphones">
+                        <img class="product__card-img" src="img/beats-headphones.png" alt="beats headphones">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>3.4</span>
@@ -678,7 +678,7 @@
                         </div>
                     </div>
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/macbook-pro.png" alt="macbook pro">
+                        <img class="product__card-img" src="img/macbook-pro.png" alt="macbook pro">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>4.5</span>
@@ -707,7 +707,7 @@
                         </div>
                     </div>
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/ipad-pro.png" alt="ipad pro">
+                        <img class="product__card-img" src="img/ipad-pro.png" alt="ipad pro">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>5.0</span>
@@ -736,7 +736,7 @@
                         </div>
                     </div>
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/homepod.png" alt="homepod">
+                        <img class="product__card-img" src="img/homepod.png" alt="homepod">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>3.3</span>
@@ -765,7 +765,7 @@
                         </div>
                     </div>
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/jlab-audio-wireless.png" alt="jlab audio wireless">
+                        <img class="product__card-img" src="img/jlab-audio-wireless.png" alt="jlab audio wireless">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>5.0</span>
@@ -794,7 +794,7 @@
                         </div>
                     </div>
                     <div class="product__card">
-                        <img class="product__card-img" src="/img/magic-mouse.png" alt="magic mouse">
+                        <img class="product__card-img" src="img/magic-mouse.png" alt="magic mouse">
                         <div class="product__card-items">
                             <button class="btn product__btn-rating">
                                 <span>4.4</span>
